# rwm

./: .gitignore  CMakeLists.txt  Makefile  README  config.h  config.mk  dwm  dwm.c  dwm.desktop  run  run-dwm  run-dwm.sh  rwm.desktop  setup.sh
c_version/: CMakeLists.txt  Makefile  config.def.h  config.h  transient.c
c_version/src/: dwm.c  dwm.h  main.c
c_version/src/lib/: button.h  client.h  cursor.h  drw.h  enums.h  keys.h  layout.h  macros.h  monitor.h  rule.h  variables.h
c_version/src/lib/x11/: window.h  x_error_event.h
rwm/: Cargo.toml
rwm/src/: lib.rs  main.rs
scripts/: update.sh
src/: drw.c  dwm.c  dwm.h  main.c
src/drw/: drw.c
src/lib/: Arg.h  arg.h  button.h  client.h  cursor.h  drw.h  dwm_lib.h  fnt.h  key.h  layout.h  macros.h  rule.h  variables.h
src/lib/x11/: XEvent.h  display.h  window.h
src/util/: util.h
